# locker

./: .coveragerc  .flake8  .gitignore  .pylintrc  .xproject_python  Dockerfile  Dockerfile-Http  Dockerfile-Sock  Makefile  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docker-locker.yml  package.yml  release.yml
xpw_locker/: attribute.py  command.py  httpproxy.py  server.py  sockproxy.py
xpw_locker/resources/: login.html
xpw_locker/resources/locale/: en.xlc  zh-Hans.xlc  zh-Hant.xlc
xpw_locker/unittest/: test_command.py  test_httpproxy.py  test_server.py  test_sockproxy.py
